[gd_scene load_steps=19 format=4 uid="uid://chokmcr8fcf15"]

[ext_resource type="Script" uid="uid://b18vecslvclra" path="res://Scripts/PacmanSceneRefactored.gd" id="1_x1xtj"]
[ext_resource type="Texture2D" uid="uid://dedn47ecsgf04" path="res://icon.svg" id="2_3vb7k"]
[ext_resource type="Texture2D" uid="uid://bemfmuflehpnk" path="res://Sprites/32x32Tileset/dörtyol.png" id="2_b4nuf"]
[ext_resource type="Texture2D" uid="uid://dfv0mvddur17c" path="res://Sprites/pacman-characters_0002_Layer-11.png" id="3_7au7o"]
[ext_resource type="Texture2D" uid="uid://hfabfg1mwgi3" path="res://Sprites/32x32Tileset/Layer 1.png" id="3_vu7lm"]
[ext_resource type="PackedScene" uid="uid://cm0p1gkpepcso" path="res://Scenes/Coin.tscn" id="3_x1xtj"]
[ext_resource type="Texture2D" uid="uid://b6pamw636cx0v" path="res://Sprites/32x32Tileset/sağ.png" id="4_4mrvw"]
[ext_resource type="Texture2D" uid="uid://dnftum7ydb4xg" path="res://Sprites/32x32Tileset/sol.png" id="5_epbdp"]
[ext_resource type="Texture2D" uid="uid://3ps23qxb50rs" path="res://Sprites/32x32Tileset/yatay.png" id="6_g2lr7"]
[ext_resource type="Texture2D" uid="uid://4ina0qj2ts08" path="res://Sprites/32x32Tileset/mor.png" id="7_vu7lm"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_u8wxw"]
texture = ExtResource("2_b4nuf")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
1:0/0 = 0
0:1/0 = 0
1:1/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_jdc0l"]
texture = ExtResource("3_vu7lm")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
1:0/0 = 0
0:1/0 = 0
1:1/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_ube8i"]
texture = ExtResource("4_4mrvw")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
1:0/0 = 0
0:1/0 = 0
1:1/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_gkjcs"]
texture = ExtResource("5_epbdp")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
1:0/0 = 0
0:1/0 = 0
1:1/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_qqmls"]
texture = ExtResource("6_g2lr7")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
1:0/0 = 0
0:1/0 = 0
1:1/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_4mrvw"]
texture = ExtResource("7_vu7lm")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0

[sub_resource type="TileSet" id="TileSet_ghjhb"]
tile_size = Vector2i(32, 32)
sources/2 = SubResource("TileSetAtlasSource_u8wxw")
sources/3 = SubResource("TileSetAtlasSource_jdc0l")
sources/4 = SubResource("TileSetAtlasSource_ube8i")
sources/5 = SubResource("TileSetAtlasSource_gkjcs")
sources/6 = SubResource("TileSetAtlasSource_qqmls")
sources/7 = SubResource("TileSetAtlasSource_4mrvw")

[sub_resource type="CircleShape2D" id="CircleShape2D_player"]
radius = 25.02

[node name="PacmanScene" type="Node2D"]
script = ExtResource("1_x1xtj")

[node name="TileMapLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAAACEABAAAAAAAAGAAACAAAwAAAAAAAAAAAB8AAwAAAAAAAAAAAB4AAwAAAAAAAAAAAB0AAwAAAAAAAAAAABwAAwAAAAAAAAAAABsAAwAAAAAAAAAAABoAAwAAAAAAAAAAABkAAwAAAAAAAAAAABgAAwAAAAAAAAAAABcAAwAAAAAAAAAAABYAAwAAAAAAAAAAABUAAwAAAAAAAAAAABQAAwAAAAAAAAAAABMAAwAAAAAAAAAAABIAAwAAAAAAAAAAABEAAwAAAAAAAAAAABAAAwAAAAAAAAAAAA8AAwAAAAAAAAAAAA4AAwAAAAAAAAAAAA0AAwAAAAAAAAAAAAwAAwAAAAAAAAAAAAsAAwAAAAAAAAAAAAoAAwAAAAAAAAAAAAkAAwAAAAAAAAAAAAgAAwAAAAAAAAAAAAcAAwAAAAAAAAAAAAYAAwAAAAAAAAAAAAUAAwAAAAAAAAAAAAQAAwAAAAAAAAAAAAMAAwAAAAAAAAAAAAIAAwAAAAAAAAAAAAEAAwAAAAAAAAAAAAAABAAAAAAAAAABAAAABgAAAAAAAAACAAAABgAAAAAAAAADAAAABgAAAAAAAAAEAAAABgAAAAAAAAAFAAAABgAAAAAAAAAGAAAABgAAAAAAAAAHAAAABgAAAAAAAAAIAAAABgAAAAAAAAAJAAAABgAAAAAAAAAKAAAABgAAAAAAAAALAAAABgAAAAAAAAAMAAAABgAAAAAAAAANAAAABgAAAAAAAAAOAAAABgAAAAAAAAAPAAAABgAAAAAAAAAQAAAABgAAAAAAAAARAAAABQAAAAAAAFAUAAAABQAAAAAAADAWAAAABgAAAAAAAAAXAAAABgAAAAAAAAAYAAAABgAAAAAAAAAZAAAABgAAAAAAAAAaAAAABgAAAAAAAAAbAAAABgAAAAAAAAAcAAAABgAAAAAAAAAdAAAABgAAAAAAAAAeAAAABgAAAAAAAAAfAAAABgAAAAAAAAAgAAAABgAAAAAAAAAhAAAABgAAAAAAAAAiAAAABgAAAAAAAAAjAAAABgAAAAAAAAAkAAAABgAAAAAAAAAlAAAABgAAAAAAAAAmAAAABgAAAAAAAAAnAAAABgAAAAAAAAAoAAAABgAAAAAAAAApAAAABgAAAAAAAAAqAAAABgAAAAAAAAArAAAABgAAAAAAAAAsAAAABgAAAAAAAAAtAAAABgAAAAAAAAAuAAAABgAAAAAAAAAvAAAABgAAAAAAAAAwAAAABgAAAAAAAAAxAAAABgAAAAAAAAAyAAAABgAAAAAAAAAzAAAABgAAAAAAAAA0AAAABgAAAAAAAAA1AAAABgAAAAAAAAA2AAAABgAAAAAAAAA3AAAABgAAAAAAAAA4AAAABgAAAAAAAAA5AAAABgAAAAAAAAA6AAAABgAAAAAAAAA7AAAABAAAAAAAAFABACEABgAAAAAAAAACACEABgAAAAAAAAADACEABgAAAAAAAAAEACEABgAAAAAAAAAFACEABgAAAAAAAAAGACEABgAAAAAAAAAHACEABgAAAAAAAAAIACEABgAAAAAAAAAJACEABgAAAAAAAAAKACEABQAAAAAAAAANACEABQAAAAAAAGAOACEABgAAAAAAAAAPACEABgAAAAAAAAAQACEABgAAAAAAAAARACEABgAAAAAAAAASACEABgAAAAAAAAATACEABgAAAAAAAAAUACEABgAAAAAAAAAVACEABgAAAAAAAAAWACEABgAAAAAAAAAXACEABgAAAAAAAAAYACEABgAAAAAAAAAZACEABgAAAAAAAAAaACEABgAAAAAAAAAbACEABgAAAAAAAAAcACEABgAAAAAAAAAdACEABgAAAAAAAAAeACEABgAAAAAAAAAfACEABgAAAAAAAAAgACEABgAAAAAAAAAhACEABgAAAAAAAAAiACEABgAAAAAAAAAjACEABgAAAAAAAAAkACEABgAAAAAAAAAlACEABgAAAAAAAAAmACEABgAAAAAAAAAnACEABgAAAAAAAAAoACEABgAAAAAAAAApACEABgAAAAAAAAAqACEABgAAAAAAAAArACEABgAAAAAAAAAsACEABgAAAAAAAAAtACEABgAAAAAAAAAuACEABgAAAAAAAAAvACEABgAAAAAAAAAwACEABgAAAAAAAAAxACEABgAAAAAAAAAyACEABgAAAAAAAAAzACEABgAAAAAAAAA0ACEABgAAAAAAAAA1ACEABgAAAAAAAAA2ACEABgAAAAAAAAA3ACEABgAAAAAAAAA4ACEABgAAAAAAAAA5ACEABgAAAAAAAAA6ACEABgAAAAAAAAA7ACEABAAAAAAAADA7ACAAAwAAAAAAAAA7AB8AAwAAAAAAAAA7AB4AAwAAAAAAAAA7AB0AAwAAAAAAAAA7ABwAAwAAAAAAAAA7ABsAAwAAAAAAAAA7ABoAAwAAAAAAAAA7ABkAAwAAAAAAAAA7ABgAAwAAAAAAAAA7ABcAAwAAAAAAAAA7ABYAAwAAAAAAAAA7ABUAAwAAAAAAAAA7ABQAAwAAAAAAAAA7ABMAAwAAAAAAAAA7ABIAAwAAAAAAAAA7ABEAAwAAAAAAAAA7ABAAAwAAAAAAAAA7AA8AAwAAAAAAAAA7AA4AAwAAAAAAAAA7AA0AAwAAAAAAAAA7AAwAAwAAAAAAAAA7AAsAAwAAAAAAAAA7AAoAAwAAAAAAAAA7AAkAAwAAAAAAAAA7AAgAAwAAAAAAAAA7AAcAAwAAAAAAAAA7AAYABQAAAAAAAGA7AAMABQAAAAAAADA7AAIAAwAAAAAAAAA7AAEAAwAAAAAAAAAVAAAABgAAAAAAAAARAP//BgAAAAAAAAASAP//BgAAAAAAAAATAP//BgAAAAAAAAAUAP//BgAAAAAAAAA8AAMABgAAAAAAAAA8AAQABgAAAAAAAAA8AAUABgAAAAAAAAA8AAYABgAAAAAAAAAKACIABgAAAAAAAAALACIABgAAAAAAAAAMACIABgAAAAAAAAANACIABgAAAAAAAAAaABEABAAAAAAAAGAbABEABgAAAAAAAAAcABEABgAAAAAAAAAdABEABgAAAAAAAAAeABEAAgAAAAAAAAAfABEAAgAAAAAAAAAgABEABgAAAAAAAAAhABEABgAAAAAAAAAeAA4AAwAAAAAAAAAeAA8AAwAAAAAAAAAeABAAAgAAAAAAAAAeABIAAwAAAAAAAAAeABMAAwAAAAAAAAAeABQAAwAAAAAAAAAiABEABgAAAAAAAAAfAA4AAwAAAAAAAAAaABAABAAAAAAAAAAiABAABgAAAAAAAAAeABUABAAAAAAAAGAfABUABAAAAAAAADAfABQAAwAAAAAAAAAfABMAAwAAAAAAAAAfABIAAwAAAAAAAAAfABAAAgAAAAAAAAAfAA8AAwAAAAAAAAAeAA0ABAAAAAAAAAAfAA0ABAAAAAAAAFAbABAABgAAAAAAAAAcABAABgAAAAAAAAAdABAABgAAAAAAAAAgABAABgAAAAAAAAAhABAABgAAAAAAAAAjABAABAAAAAAAAFAjABEABAAAAAAAADAWABYABAAAAAAAAAAXABYABAAAAAAAAFAWABcABAAAAAAAAGAXABcABAAAAAAAADAUABYABAAAAAAAAAAUABcABAAAAAAAAGAVABYABAAAAAAAAFAVABcABAAAAAAAADAmAAoABAAAAAAAAAAmAAsABAAAAAAAAGAnAAoABAAAAAAAAFAnAAsABAAAAAAAADAoAAoABAAAAAAAAAAoAAsABAAAAAAAAGApAAoABAAAAAAAAFApAAsABAAAAAAAADAqAAoABAAAAAAAAAAqAAsABAAAAAAAAGArAAoABAAAAAAAAFArAAsABAAAAAAAADASAAsABAAAAAAAAGATAAsABAAAAAAAADAUAAsABAAAAAAAAGAVAAsABAAAAAAAADAWAAsABAAAAAAAAGAXAAsABAAAAAAAADASAAoABAAAAAAAAAATAAoABAAAAAAAAFAUAAoABAAAAAAAAAAVAAoABAAAAAAAAFAWAAoABAAAAAAAAAAXAAoABAAAAAAAAFASABIABAAAAAAAAAASABMABAAAAAAAAGASABQABAAAAAAAAAASABUABAAAAAAAAGATABIABAAAAAAAAFATABMABAAAAAAAADATABQABAAAAAAAAFATABUABAAAAAAAADAqAAYABAAAAAAAAAAqAAcABAAAAAAAAGAqAAgABAAAAAAAAAAqAAkABAAAAAAAAGAqAAwABAAAAAAAAAAqAA0ABAAAAAAAAGAqAA4ABAAAAAAAAAAqAA8ABAAAAAAAAGArAAYABAAAAAAAAFArAAcABAAAAAAAADArAAgABAAAAAAAAFArAAkABAAAAAAAADArAAwABAAAAAAAAFArAA0ABAAAAAAAADArAA4ABAAAAAAAAFArAA8ABAAAAAAAADAsAAoABAAAAAAAAAAsAAsABAAAAAAAAGAtAAoABAAAAAAAAFAtAAsABAAAAAAAADAuAAoABAAAAAAAAAAuAAsABAAAAAAAAGAvAAoABAAAAAAAAFAvAAsABAAAAAAAADApABYABAAAAAAAAFApABcABAAAAAAAADAqABYABAAAAAAAAAAqABcABAAAAAAAAGArABYABAAAAAAAAFArABcABAAAAAAAADAmABYABAAAAAAAAAAnABYABAAAAAAAAFAoABYABAAAAAAAAAAoABcABAAAAAAAAGAmABcABAAAAAAAAGAnABcABAAAAAAAADAWAAgABAAAAAAAAAAWAAkABAAAAAAAAGAXAAgABAAAAAAAAFAXAAkABAAAAAAAADASAAwABAAAAAAAAAASAA0ABAAAAAAAAGATAAwABAAAAAAAAFATAA0ABAAAAAAAADAWAAYABAAAAAAAAAAWAAcABAAAAAAAAGAXAAYABAAAAAAAAFAXAAcABAAAAAAAADAmABgABAAAAAAAAAAmABkABAAAAAAAAGAmABoABAAAAAAAAAAmABsABAAAAAAAAGAnABgABAAAAAAAAFAnABkABAAAAAAAADAnABoABAAAAAAAAFAnABsABAAAAAAAADAqABQABAAAAAAAAAAqABUABAAAAAAAAGArABQABAAAAAAAAFArABUABAAAAAAAADAcABoABAAAAAAAAAAcABsABAAAAAAAAGAdABoABAAAAAAAAFAdABsABAAAAAAAADAeABoABAAAAAAAAAAeABsABAAAAAAAAGAfABoABAAAAAAAAFAfABsABAAAAAAAADAgABoABAAAAAAAAAAgABsABAAAAAAAAGAhABoABAAAAAAAAFAhABsABAAAAAAAADAcAAYABAAAAAAAAAAcAAcABAAAAAAAAGAdAAYABAAAAAAAAFAdAAcABAAAAAAAADAeAAYABAAAAAAAAAAeAAcABAAAAAAAAGAfAAYABAAAAAAAAFAfAAcABAAAAAAAADAgAAYABAAAAAAAAAAgAAcABAAAAAAAAGAhAAYABAAAAAAAAFAhAAcABAAAAAAAADAOABYABAAAAAAAAAAOABcABAAAAAAAAGAPABYABAAAAAAAAFAPABcABAAAAAAAADAQABYABAAAAAAAAAAQABcABAAAAAAAAGARABYABAAAAAAAAFARABcABAAAAAAAADASABYABAAAAAAAAAASABcABAAAAAAAAGASABgABAAAAAAAAAASABkABAAAAAAAAGASABoABAAAAAAAAAASABsABAAAAAAAAGATABYABAAAAAAAAFATABcABAAAAAAAADATABgABAAAAAAAAFATABkABAAAAAAAADATABoABAAAAAAAAFATABsABAAAAAAAADAIAAYABAAAAAAAAAAIAAcABAAAAAAAAGAIAAgABAAAAAAAAAAIAAkABAAAAAAAAGAIAAoABAAAAAAAAAAIAAsABAAAAAAAAGAJAAYABAAAAAAAAFAJAAcABAAAAAAAADAJAAgABAAAAAAAAFAJAAkABAAAAAAAADAJAAoABAAAAAAAAFAJAAsABAAAAAAAADAGAAkABAAAAAAAAGAGAAgABAAAAAAAAAAHAAkABAAAAAAAADAHAAgABAAAAAAAAFAKAAkABAAAAAAAAGAKAAgABAAAAAAAAAALAAkABAAAAAAAADALAAgABAAAAAAAAFA0AAgABAAAAAAAAAA0AAkABAAAAAAAAGA1AAgABAAAAAAAAFA1AAkABAAAAAAAADA2AAgABAAAAAAAAAA2AAkABAAAAAAAAGA3AAgABAAAAAAAAFA3AAkABAAAAAAAADA0AAYABAAAAAAAAAA0AAcABAAAAAAAAGA1AAYABAAAAAAAAFA1AAcABAAAAAAAADA2AAYABAAAAAAAAAA2AAcABAAAAAAAAGA3AAYABAAAAAAAAFA3AAcABAAAAAAAADA0AAoABAAAAAAAAAA0AAsABAAAAAAAAGA1AAoABAAAAAAAAFA1AAsABAAAAAAAADA2AAoABAAAAAAAAAA2AAsABAAAAAAAAGA3AAoABAAAAAAAAFA3AAsABAAAAAAAADAEABYABAAAAAAAAAAEABcABAAAAAAAAGAFABYABAAAAAAAAFAFABcABAAAAAAAADAGABYABAAAAAAAAAAGABcABAAAAAAAAGAHABYABAAAAAAAAFAHABcABAAAAAAAADAIABYABAAAAAAAAAAIABcABAAAAAAAAGAIABgABAAAAAAAAAAIABkABAAAAAAAAGAIABoABAAAAAAAAAAIABsABAAAAAAAAGAJABYABAAAAAAAAFAJABcABAAAAAAAADAJABgABAAAAAAAAFAJABkABAAAAAAAADAJABoABAAAAAAAAFAJABsABAAAAAAAADA0ABgABAAAAAAAAAA0ABkABAAAAAAAAGA0ABoABAAAAAAAAAA0ABsABAAAAAAAAGA1ABgABAAAAAAAAFA1ABkABAAAAAAAADA1ABoABAAAAAAAAFA1ABsABAAAAAAAADA0ABYABAAAAAAAAAA0ABcABAAAAAAAAGA1ABYABAAAAAAAAFA1ABcABAAAAAAAADA=")
tile_set = SubResource("TileSet_ghjhb")

[node name="Player" type="CharacterBody2D" parent="." groups=["player"]]
position = Vector2(59, 48)

[node name="Sprite2D" type="Sprite2D" parent="Player"]
modulate = Color(1, 1, 0, 1)
scale = Vector2(0.203125, 0.203125)
texture = ExtResource("3_7au7o")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
shape = SubResource("CircleShape2D_player")

[node name="ExitGates" type="Node2D" parent="."]

[node name="Gate1" type="Sprite2D" parent="ExitGates"]
modulate = Color(0.5, 0.5, 0.5, 1)
position = Vector2(384, 1080)
scale = Vector2(0.375, 0.375)
texture = ExtResource("2_3vb7k")

[node name="Gate2" type="Sprite2D" parent="ExitGates"]
modulate = Color(0.5, 0.5, 0.5, 1)
position = Vector2(608, 16)
scale = Vector2(0.375, 0.375)
texture = ExtResource("2_3vb7k")

[node name="Ghosts" type="Node2D" parent="."]

[node name="UI" type="CanvasLayer" parent="."]

[node name="CoinsLabel" type="Label" parent="UI"]
offset_left = 10.0
offset_top = 10.0
offset_right = 400.0
offset_bottom = 33.0
text = "Coins Collected: 0"

[node name="ExitPrompt" type="Label" parent="UI"]
offset_left = 10.0
offset_top = 40.0
offset_right = 600.0
offset_bottom = 63.0

[node name="WarningLabel" type="Label" parent="UI"]
offset_left = 10.0
offset_top = 70.0
offset_right = 600.0
offset_bottom = 93.0

[node name="Audio" type="Node" parent="."]

[node name="CoinPickup" type="AudioStreamPlayer2D" parent="Audio"]

[node name="GhostSpawn" type="AudioStreamPlayer2D" parent="Audio"]

[node name="Death" type="AudioStreamPlayer2D" parent="Audio"]

[node name="GateOpen" type="AudioStreamPlayer2D" parent="Audio"]

[node name="Coin" parent="." instance=ExtResource("3_x1xtj")]
position = Vector2(415, 185)

[node name="Coin2" parent="." instance=ExtResource("3_x1xtj")]
position = Vector2(415, 185)

[node name="Coin3" parent="." instance=ExtResource("3_x1xtj")]
position = Vector2(415, 185)

[node name="Coin4" parent="." instance=ExtResource("3_x1xtj")]
position = Vector2(415, 185)

[node name="Coin5" parent="." instance=ExtResource("3_x1xtj")]
position = Vector2(415, 185)

[node name="Coin6" parent="." instance=ExtResource("3_x1xtj")]
position = Vector2(415, 185)

[node name="Coin7" parent="." instance=ExtResource("3_x1xtj")]
position = Vector2(415, 185)

[node name="Coin8" parent="." instance=ExtResource("3_x1xtj")]
position = Vector2(415, 185)

[node name="Coin9" parent="." instance=ExtResource("3_x1xtj")]
position = Vector2(415, 185)

[node name="Coin10" parent="." instance=ExtResource("3_x1xtj")]
position = Vector2(415, 185)

[node name="Coin11" parent="." instance=ExtResource("3_x1xtj")]
position = Vector2(415, 185)

[node name="Coin12" parent="." instance=ExtResource("3_x1xtj")]
position = Vector2(415, 185)

[node name="Coin13" parent="." instance=ExtResource("3_x1xtj")]
position = Vector2(416, 184)

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color(0, 0, 0, 1)
z_index = -100
offset_left = -320.0
offset_top = -608.0
offset_right = 3679.0
offset_bottom = 2213.0
texture = ExtResource("2_3vb7k")
